give submission-process a lower z-index so the paper-container does not layer over it this is preventing the submission-process inbox from being visible to the user [APERTA-7210]

--- a/app/assets/stylesheets/ui/_manuscript-view-submission-process.scss
+++ b/app/assets/stylesheets/ui/_manuscript-view-submission-process.scss
@@ -1,6 +1,13 @@
-.paper-submission-process #submission-process {
-  @include position(absolute, 60px 0px auto 0px);
-  z-index: z('submission-process');
+.paper-submission-process {
+  #submission-process {
+    visibility: hidden;
+    @include position(absolute, 60px 0px auto 0px);
+    z-index: z('submission-process');
+  }
+
+  &.show-process #submission-process {
+    visibility: visible;
+  }
 }
 
 #submission-process {
